# trex_framework

./: pyproject.toml
client/: client.py  config.jsonc
client/auth/: __init__.py  core.py
client/comms/: __init__.py  rmq_manager.py
client/config/: __init__.py  rich_logger.py
client/utils/: __init__.py  glue.py
scripts/: setup.ps1  setup.sh  start_server.ps1  start_server.sh
server/: server.py
server/auth/: core.py  router.py
server/comms/: __init__.py  mongo_manager.py  rmq_manager.py  ws_manager.py
server/config/: __init__.py  config.py  rich_logger.py
server/decorators/: json_response.py
